--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.0",
     "nodemon": "^1.17.2",
     "socket.io": "^2.0.4"
   },
