--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node Chat App",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "mocha ***/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
